--- a/index.html
+++ b/index.html
@@ -16,3 +16,12 @@
 
 
     <p><b>Full Name:</b> Zyad Hammi</p>
+  
+    <p><b>Age:</b> 20 years old</p>
+    
+    <p><b>Class:</b> 2<sup>nd</sup> LMD computer Science</p>
+
+    <p><b>University:</b> University of EL OUED</p>
+
+</body>
+</html>
