--- a/index.html
+++ b/index.html
@@ -1,27 +1,53 @@
-<!D0CTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <title>Web Dev :Label</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+        .container {
+            display: flex;
+            gap: 40px;
+            align-items: flex-start;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+        .content {
+            flex: 1;
+        }
+        .photo {
+            flex: 1;
+            text-align: center;
+        }
+        .photo img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+        h1, h3 {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-
-
-    <center>
-       <h1>Welcome</h1>
-       <h3><u>Web Dev (Lab4)</u></h3>
-    <center>
-
-    <br>
-
-
-    <p><b>Full Name:</b> Zyad Hammi</p>
-  
-    <p><b>Age:</b> 20 years old</p>
+    <h1>Welcome</h1>
+    <h3><u>Web Dev (Lab4)</u></h3>
     
-    <p><b>Class:</b> 2<sup>nd</sup> LMD computer Science</p>
-
-    <p><b>University:</b> University of EL OUED</p>
-
+    <div class="container">
+        <div class="content">
+            <p><b>Full Name:</b> Zyad Hammi</p>
+            <p><b>Age:</b> 20 years old</p>
+            <p><b>Class:</b> 2<sup>nd</sup> LMD computer Science</p>
+            <p><b>University:</b> University of EL OUED</p>
+        </div>
+        
+        <div class="photo">
+            <img src="your-image.jpg" alt="Profile Photo">
+        </div>
+    </div>
 </body>
 </html>
